# mezz_sites_m2m

./: README.md  setup.cfg
mezz_sites_m2m/migrations/: 0005_migrate_field_keyword_site.py  0007_migrate_field_page_site.py
mezz_sites_m2m/migrations/blog/: 0004_add_sites_field.py
mezz_sites_m2m/migrations/conf/: 0002_add_sites_field.py
mezz_sites_m2m/migrations/generic/: 0004_add_sites_field.py
mezz_sites_m2m/migrations/pages/: 0005_add_sites_field.py
migrations/: 0001_migrate_field_blogcategory_site__migrate_field_blogpost_site.py  0003_migrate_field_setting_site.py
