[metadata]
version = 1.0.0
name = mezz_sites_m2m
long_description = file: README.md
long_description_content_type = text/markdown
url = https://bitbucket.org/raindrops/mezz_sites_m2m

[options]
packages = find:
include_package_data = true
python_requires = >=2.7, <3.0
install_requires =
    django >= 1.8

# Building

[bdist_wheel]
universal=1
